crates/character/src/race/snapshots/character__race__goblin__tests__backstory.snap
---
source: crates/character/src/race/goblin.rs
expression: goblin.backstory()

---
- "Origin: You are the victim of a curse or polymorph spell."

