crates/character/src/race/snapshots/character__race__goblin__tests__snapshot.snap
---
source: character/src/race/goblin.rs
expression: goblin

---
- type: Goblin
  origin: You are the victim of a curse or polymorph spell.
  status_symbol: Special breed of rat kept as pet
- Splug
- age: 55
  base_speeds:
    - Walking: 30
  ethnicity: ~
  gender: Female
  height: 46
  size: Small
  weight: 40

