crates/character/src/race/snapshots/character__race__goblin__tests__snapshot_abilities.snap
---
source: crates/character/src/race/goblin.rs
expression: goblin.abilities()

---
- - Dexterity
  - 2
- - Constitution
  - 1

