crates/character/src/race/snapshots/character__race__goblin__tests__snapshot_citations.snap
---
source: crates/character/src/race/goblin.rs
expression: goblin.citations()

---
- - Vgtm
  - 119

