crates/character/src/race/snapshots/character__race__goblin__tests__snapshot_features.snap
---
source: crates/character/src/race/goblin.rs
expression: goblin.features()

---
- title: Darkvision
  citation:
    - Vgtm
    - 119
- title: Fury of the Small
  citation:
    - Vgtm
    - 119
- title: Nimble Escape
  citation:
    - Vgtm
    - 119

