crates/character/src/race/snapshots/character__race__goblin__tests__snapshot_languages.snap
---
source: crates/character/src/race/goblin.rs
expression: goblin.languages()

---
- Common
- Goblin

