crates/character/src/race/snapshots/character__race__goblin__tests__snapshot_trinket_options.snap
---
source: crates/character/src/race/goblin.rs
expression: goblin.trinket_options()

---
- Goblin

